# cbus-testbed

./: Makefile  README.md  dev.sh  prod.sh
frontend/: Trunk.toml  index.html
package/: Makefile  cbus-tb.conf  cbus-tb.logrotate  cbus-tb.service  cbus-testbed-0.1.0-linux-6.6-armhf.deb  cbus-testbed.epm
server/: Cargo.toml
server/src/: main.rs
